[package]
name = "proxy_rs"
version = "0.1.2"
edition = "2024"
resolver = "2"
authors = ["wangmj"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
fern = "0.7.1"
hickory-resolver = "0.25.2"
log = "0.4.29"
regex = "1.12.2"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive","rc"] }
serde_json = "1.0.145"
serde_with = { version = "3.18.0", features = ["schemars_1"] }
toml = "0.9.11"
tokio = { version = "1.49.0", features = ["full"] }
tokio-rustls = "0.26.4"
webpki-roots = "1.0.5"
ipnetwork = "0.21.1"
maxminddb = "0.28.1"
ping = "0.7.1"
